{
    "name": "InputComtroller",
    "maps": [
        {
            "name": "PlayerMove",
            "id": "daf2f3cf-fcc2-429f-a742-6cf4901227cc",
            "actions": [
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "69fcc014-132c-4171-94ec-1027822fc14a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "49872082-79a1-4e77-9d2a-68ab358c1cc3",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "339efb3b-53ac-4457-9e09-b299f8a412bb",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "76683259-c3c5-462e-850a-2297244d0705",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "3e7af9c4-4e33-45d0-9586-dc04bcbe371f",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "8220df44-ba9c-4804-87c8-efbd481fffbc",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "CameraMove",
            "id": "a1dc06f2-cb10-4a39-be3b-b3fce52b6227",
            "actions": [
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "5a4ab876-b933-4285-85f8-a4937ad516b8",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "838c8582-9bd2-4e18-9e04-8c00285738a2",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}